--- a/beta.html
+++ b/beta.html
@@ -184,7 +184,7 @@
 <!-- HEADER -->
 <header class="site-header">
   <div class="cb-wrap header-inner">
-    <a class="brand" href="beta.html">FinTech Tools</a>
+    <a class="brand" href="beta.html">stacksAi</a>
     <button class="nav-toggle" aria-expanded="false">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
