--- a/beta.html
+++ b/beta.html
@@ -198,7 +198,7 @@
 
   <div class="cb-header" id="retirement">
     <h1 class="cb-title">Retirement Calculator</h1>
-    <div class="cb-sub">Use the best retirement calculator on the web to understand your financial future.</div>
+    <div class="cb-sub">Use the retirement calculator to understand your financial future so you can achieve your goals.</div>
   </div>
 
   <div class="cb-stack">
