--- a/beta.html
+++ b/beta.html
@@ -153,7 +153,7 @@
 <!-- HEADER -->
 <header class="site-header">
   <div class="cb-wrap header-inner">
-    <a class="brand" href="beta.html">FinTech Tools</a>
+    <a class="brand" href="beta.html">stackxAi</a>
     <button class="nav-toggle" aria-expanded="false">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
@@ -167,7 +167,7 @@
 
   <div class="cb-header" id="retirement">
     <h1 class="cb-title">Retirement Calculator</h1>
-    <div class="cb-sub">Use the best retirement calculator on the web to understand your financial future.</div>
+    <div class="cb-sub">Use the retirement calculator to understand your financial future, so you can achieve your goals.</div>
   </div>
 
   <div class="cb-stack">
@@ -198,7 +198,7 @@
         </div>
 
         <div class="cb-field"><label>Pension Start</label><input id="pensiondate" type="date" /></div>
-        <div class="cb-field"><label>Pension Amount ($)</label><input id="pensions" type="number" /></div>
+        <div class="cb-field"><label>Annual Pension Amount ($)</label><input id="pensions" type="number" /></div>
 
         <!-- Non-retirement assets -->
         <div class="cb-field">
